--- a/src/index.html
+++ b/src/index.html
@@ -54,67 +54,24 @@
              </todo-item>
         </ol>
     </div>
+    <div id="example">
+        <p>Original message:"{{message}}"</p>
+        <p>Computed reversed message:"{{reversedMessage}}"</p>
+    </div>
+    <div id="demo">{{fullName}}</div>
+    <!-- 条件渲染 -->
+    <div id="condition">
+        <template v-if="loginType === 'username'">
+            <label for="">Username</label>
+            <input type="text" placeholder="Enter your username">
+        </template>
+        <template v-else>
+            <label for="">Email</label>
+            <input type="text" placeholder="Enter your email address">
+        </template>
+        <button v-on:click="toggleLoginType">Toggle login type</button>
+    </div>
     <script src="https://unpkg.com/vue"></script>
-    <script>
-    	var app = new Vue({
-    		el: '#app',
-    		data: {
-    			message: 'Hello World!'
-    		}
-    	})
-    	var app2 = new Vue({
-    		el: '#app-2',
-    		data: {
-    			message: '页面加载于 ' + new Date()
-    		}
-    	})
-    	var app3 = new Vue({
-    		el: '#app-3',
-    		data: {
-    			seen: true
-    		}
-    	})
-    	var app4 = new Vue({
-    		el: '#app-4',
-    		data: {
-    			todos: [
-    				{text: '学习 JavaScript'},
-    				{text: '学习 Vue'},
-    				{text: '整个牛项目'}
-    			]
-    		}
-    	})
-    	var app5 = new Vue({
-    		el: '#app-5',
-    		data: {
-    			message: 'Hello Vue.js!'
-    		},
-    		methods: {
-    			reverseMessage: function() {
-    				this.message = this.message.split('').reverse().join('')
-    			}
-    		}
-    	})
-        var app6 = new Vue({
-            el: '#app-6',
-            data: {
-                message: 'Hello Vue!'
-            }
-        })
-        Vue.component('todo-item', {
-            props: ['todo'],
-            template: '<li>{{todo.text}}</li>'
-        })
-        var app7 = new Vue({
-            el: '#app-7',
-            data: {
-                groceryList: [
-                    {id: 0, text: '蔬菜'},
-                    {id: 1, text: '奶酪'},
-                    {id: 2, text: '随便其他什么人吃的东西'}
-                ]
-            }
-        })
-    </script>
+    <script src="js/script.js"></script>
 </body>
 </html>
